# Craby_Rugby

./: Cargo.toml  LICENSE  README.md  config.json
server/src/: config.rs  game.rs  main.rs  player.rs
server/src/game/: player.rs
web/statics/css/: style.css
web/statics/js/: main.js
web/templates/: index.html
web_server/: go.mod  main.go
