[package]
name = "Capture_The_Flag"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.17"
serde = { version = "1.0", features = ["derive"] }
futures-util = "0.3.31"
anyhow = "1.0"

[[bin]]
name = "main"
path = "server/src/main.rs"