[package]
name = "Capture_The_Flag"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.18"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
warp = "0.3.7"

[[bin]]
name = "main"
path = "server/src/main.rs"